@@ -26,6 +26,12 @@ Incompatible changes in 6.0 version:
   * The hamiltonian h_psi no longer needs "npw" and "igk" to be initialized
     via module "wvfct", but it needs "current_k" to be set to the index of
     the current k-point
+  * k-point dependent variables npw, igk, and (in LR codes) npwq, igkq, 
+    become local and point to global variables "ngk" and "igk_k", via the
+    k-point index "ik" or, in LR codes, via "ikks" and "ikkq" indices.
+    The global variable are computed once, stored in memory, no I/O is done.
+  * "nbnd_occ" variable is now dynamically allocated
+  * Duplicated and confusing "outdir" variable removed from "io_files"
 
                                * * * * *
 
